--- a/node-red-contrib/package.json
+++ b/node-red-contrib/package.json
@@ -25,6 +25,6 @@
     }
   },
   "dependencies": {
-    "@lunchbox-lambda/client": "^1.0.5"
+    "@lunchbox-lambda/client": "file:../client"
   }
 }
