--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@lunchbox-lambda/client": "^1.0.5",
+    "@lunchbox-lambda/client": "file:../client",
     "@types/react": "^16.3.17",
     "@types/react-addons-css-transition-group": "^15.0.4",
     "@types/react-dom": "^16.0.6",
