--- a/node-red-contrib/package.json
+++ b/node-red-contrib/package.json
@@ -8,13 +8,8 @@
     "type": "git",
     "url": "https://github.com/lunchbox-lambda/node-red-contrib-lunchbox.git"
   },
-  "files": [
-    "src/"
-  ],
   "main": "index.js",
-  "scripts": {
-    "release": "npm publish"
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/lunchbox-lambda/node-red-contrib-lunchbox/issues"
   },
