--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: node_js
+
+deploy:
+  provider: script
+  script: bash scripts/deploy.sh
+  on:
+    tags: true
+    condition: $TRAVIS_TAG =~ ^[0-9.]+
