Fixed travis build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
 
     - stage: build
       script:
+      - cd client && yarn build
       - cd frontend && yarn build
       - cd brain && yarn build
       
