Added files property to package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/lunchbox-lambda/frontend.git"
   },
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "start": "webpack-dev-server",
     "clean": "rm -rf dist",
