--- a/brain/package.json
+++ b/brain/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/lunchbox-lambda/brain.git"
   },
+  "files": [
+    "dist/"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc -p .",
