--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,22 @@ language: node_js
 
 node_js: "10"
 
-install: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+install:
+  - yarn install
 
-# script:
-#   - yarn workspaces run build
-#   - yarn workspaces run pack
+script:
+  - yarn workspaces run build
+  - yarn workspaces run pack
 
-# deploy:
-#   provider: script
-#   script:
-#   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-#   - docker build --build-arg BUILD_VERSION=$TRAVIS_TAG -t lunchbox .
-#   # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#   # - docker push $DOCKER_USERNAME/travis-ci-build-stages-demo
-#   on:
-#     tags: true
-#     branch: master
-#     condition: tag =~ ^[0-9.]+
+deploy:
+  provider: script
+  script:
+    - export DOCKER_IMAGE=lunchboxlambda/lunchbox:0.0.1
+    - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    - docker build --build-arg BUILD_VERSION=$TRAVIS_TAG -t $DOCKER_IMAGE .
+    - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+    - docker push $DOCKER_IMAGE
+  # on:
+  #   tags: true
+  #   branch: master
+  #   condition: tag =~ ^[0-9.]+
