Travis deploy from script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,7 @@ script:
 
 deploy:
   provider: script
-  script:
-    - export DOCKER_IMAGE=lunchboxlambda/lunchbox:0.0.1
-    - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - docker build --build-arg BUILD_VERSION=$TRAVIS_TAG -t $DOCKER_IMAGE .
-    - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-    - docker push $DOCKER_IMAGE
+  script: bash scripts/deploy.sh
   # on:
   #   tags: true
   #   branch: master
