--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 deploy:
   provider: script
   script: bash scripts/deploy.sh
+  skip_cleanup: true
   # on:
   #   tags: true
   #   branch: master
