--- a/brain/package.json
+++ b/brain/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "tsc": "tsc -p .",
     "clean": "rm -rf dist",
+    "eslint": "eslint **/*/*.ts",
     "copy": "cp -r src/schemas dist",
     "build": "npm run clean && tsc -p . && npm run copy"
   },
@@ -53,6 +54,9 @@
     "@types/socket.io": "^1.4.31",
     "@types/uuid": "^3.4.3",
     "@types/uuid-1345": "^0.99.21",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "eslint": "^6.0.1",
     "typescript": "^2.9.2"
   }
 }
