--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@lunchbox-lambda/client": "file:../client",
+    "@types/dom4": "^2.0.1",
     "@types/react": "^16.3.17",
     "@types/react-addons-css-transition-group": "^15.0.4",
     "@types/react-dom": "^16.0.6",
@@ -43,7 +44,7 @@
     "rxjs": "^5.5.8",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.5.3",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.2.0"
