Fixed workspace dependencies

--- a/node-red/package.json
+++ b/node-red/package.json
@@ -17,7 +17,7 @@
     "build": "true"
   },
   "dependencies": {
-    "node-red-contrib-lunchbox": "file:../node-red-contrib",
+    "node-red-contrib-lunchbox": "",
     "node-red-dashboard": "^2.13.2"
   }
 }
