--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@lunchbox-lambda/client": "file:../client",
+    "@lunchbox-lambda/client": "",
     "@types/dom4": "^2.0.1",
     "@types/react": "^16.3.17",
     "@types/react-addons-css-transition-group": "^15.0.4",
