--- a/brain/.eslintrc
+++ b/brain/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "extends": ["airbnb-base", "plugin:@typescript-eslint/recommended"],
   "rules": {
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/explicit-function-return-type": "off"
