--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && tsc -p ."
+    "build": "yarn clean && tsc -p ."
   },
   "dependencies": {
     "inversify": "^4.11.1",
