Moved typescript to workspace dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.121",
     "@types/node": "^9.4.6",
-    "@types/socket.io-client": "^1.4.32",
-    "typescript": "^3.5.3"
+    "@types/socket.io-client": "^1.4.32"
   }
 }
