--- a/brain/package.json
+++ b/brain/package.json
@@ -58,7 +58,6 @@
     "@typescript-eslint/parser": "^1.12.0",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "typescript": "^3.5.3"
+    "eslint-plugin-import": "^2.18.2"
   }
 }
