--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "node-red",
     "node-red-contrib"
   ],
+  "scripts": {
+    "eslint": "eslint \"brain/**/*.ts\""
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "typescript": "^3.5.3"
   }
 }
