--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,16 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": "src",
-    "target": "es2017",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "removeComments": true,
-    "noImplicitAny": false,
-    "declaration": true
   },
   "include": [
     "src/**/*"
