--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "dist/"
   ],
   "scripts": {
-    "start": "webpack-dev-server",
     "clean": "rm -rf dist",
+    "start": "webpack-dev-server",
     "build": "yarn clean && webpack --config webpack.config.js --mode=production"
   },
   "devDependencies": {
@@ -47,5 +47,8 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.2.0"
+  },
+  "peerDependencies": {
+    "typescript": ""
   }
 }
