--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,16 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": "src",
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "removeComments": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": true,
     "jsx": "react"
   },
   "include": [
