--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,25 @@
     "start": "webpack-dev-server",
     "build": "yarn clean && webpack --config webpack.config.js --mode=production"
   },
-  "devDependencies": {
+  "dependencies": {
     "@blueprintjs/core": "^1.40.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@lunchbox-lambda/client": "",
+    "lodash": "^4.17.14",
+    "moment": "^2.21.0",
+    "react": "^16.4.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.4.0",
+    "react-markdown": "^3.3.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "rxjs": "^5.5.8"
+  },
+  "devDependencies": {
     "@types/dom4": "^2.0.1",
+    "@types/lodash": "^4.14.121",
     "@types/react": "^16.3.17",
     "@types/react-addons-css-transition-group": "^15.0.4",
     "@types/react-dom": "^16.0.6",
@@ -33,15 +45,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "moment": "^2.21.0",
     "node-sass": "^4.11.0",
-    "react": "^16.4.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.4.0",
-    "react-markdown": "^3.3.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "rxjs": "^5.5.8",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
