--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,52 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "extends": ["airbnb-base", "plugin:@typescript-eslint/recommended"],
+  "extends": [
+    "airbnb-base",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "env": { "node": true, "browser": true },
+  "settings": {
+    "react": {
+        "version": "detect",
+    },
+  },
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/indent": ["error", 2],
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-parameter-properties": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "arrow-body-style": "off",
+    "class-methods-use-this": "off",
+    "consistent-return": "off",
+    "function-paren-newline": "off",
+    "global-require": "off",
+    "implicit-arrow-linebreak": "off",
+    "import/no-duplicates": "off",
+    "import/no-dynamic-require": "off",
+    "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
+    "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
+    "max-classes-per-file": "off",
+    "no-alert": "off",
+    "no-async-promise-executor": "off",
+    "no-await-in-loop": "off",
+    "no-continue": "off",
+    "no-empty-function": "off",
+    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "no-nested-ternary": "off",
+    "no-param-reassign": "off",
+    "no-plusplus": "off",
+    "no-restricted-syntax": "off",
+    "no-shadow": "off",
+    "no-underscore-dangle": "off",
+    "object-curly-newline": "off",
+    "object-property-newline": "off",
+    "operator-linebreak": "off",
   }
 }
