--- a/.eslintrc
+++ b/.eslintrc
@@ -30,9 +30,9 @@
     "import/no-duplicates": "off",
     "import/no-dynamic-require": "off",
     "import/no-unresolved": "off",
-    "import/prefer-default-export": "off",
     "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
     "max-classes-per-file": "off",
+    "max-len": "off",
     "no-alert": "off",
     "no-async-promise-executor": "off",
     "no-await-in-loop": "off",
